# FailsBot

./: CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp  stupidbotapi.cpp
botapi/: CMakeLists.txt  bot_easy_api.cpp
cfg/: botkey  botkey.h
